# tuitab

./: .gitignore  .markdownlint.json  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  cliff.toml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
packaging/aur/: PKGBUILD  PKGBUILD-bin  README.md
packaging/debian/: README.md  changelog  control  copyright  rules
packaging/homebrew/: README.md  tuitab.rb
src/: app.rs  app_state.rs  clipboard.rs  event.rs  keymap.rs  lib.rs  main.rs  sheet.rs  test.rs  theme.rs  types.rs
src/app/: mod.rs
src/app/actions/: aggregator.rs  chart.rs  clipboard.rs  column.rs  edit.rs  expression.rs  io.rs  join.rs  mod.rs  navigation.rs  pivot.rs  search.rs  selection.rs  type_select.rs
src/data/: aggregator.rs  async_loader.rs  column.rs  dataframe.rs  expression.rs  io.rs  join.rs  loader.rs  mod.rs  sort.rs  swap.rs
src/data/io/: directory.rs  duckdb.rs  excel.rs  json.rs  mod.rs  parquet.rs  sqlite.rs  txt.rs
src/ui/: charts.rs  edit_bar.rs  expr_bar.rs  mod.rs  popup.rs  search_bar.rs  select_regex_bar.rs  status_bar.rs  table_view.rs  text_input.rs
src/ui/popup/: aggregator.rs  dedup_tiebreaker.rs  help.rs  input.rs  join.rs  misc.rs  mod.rs  type_select.rs
test_data/: prices.csv  sample.csv
test_data/subdir/: colors.csv
tests/: data_tests.rs  freq_sort_test.rs  frequency_tests.rs  polars_perf_tests.rs  sort_tests.rs
