[package]
name = "tuitab"
version = "0.1.0"
edition = "2021"
authors = ["denisotree"]
description = "Terminal tabular data explorer — CSV/JSON/Parquet/Excel/SQLite viewer with filtering, sorting, pivot tables, and charts"
license = "Apache-2.0"
repository = "https://github.com/denisotree/tuitab"
homepage = "https://github.com/denisotree/tuitab"
documentation = "https://github.com/denisotree/tuitab#readme"
readme = "README.md"
keywords = ["tui", "csv", "data", "terminal", "tabular"]
categories = ["command-line-utilities", "visualization"]
rust-version = "1.85"
exclude = [
    "packaging/",
    ".github/",
    "docs/",
]

[[bin]]
name = "tuitab"
path = "src/main.rs"

[[bin]]
name = "ttab"
path = "src/main.rs"

[[bin]]
name = "tt"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
color-eyre = "0.6"
unicode-width = "0.2"
clap = { version = "4", features = ["derive"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
bincode = "1"
arboard = "3"
polars = { version = "0.46", features = ["csv", "lazy", "dtype-date", "dtype-datetime", "strings", "json", "parquet", "serde", "serde-lazy", "timezones", "pivot", "is_in"] }
polars-ops = { version = "0.46", features = ["pivot"] }
libc = "0.2"
calamine = "0.22"
rusqlite = "0.31"
rust_xlsxwriter = "0.80"

[profile.release]
opt-level = 3
lto = true
strip = true
